--- a/styles.css
+++ b/styles.css
@@ -8,31 +8,90 @@ body {
 }
 
 nav {
-	border-bottom: 2px solid orange;
+  border-bottom: 2px solid orange;
 }
 
 ol {
-	padding-left: 0;
+  padding-left: 0;
 }
 
 .crumb {
-	margin-right: 2em;
-	display: inline;
+  margin-right: 2em;
+  display: inline;
 }
 
 a {
-	color: orange;
+  color: orange;
 }
 
 a:visited {
-	color: crimson;
+  color: crimson;
 }
 
-
 input {
-	display: block;
+  display: block;
 }
 
 img {
-	max-width: 300px;
+  max-width: 300px;
+}
+.flex-parent {
+  display: flex;
+}
+.jc-center {
+  justify-content: center;
+}
+.fun-alerts {
+  display: inline-block;
+  padding: 10px 10px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  color: black;
+  background-color: yellow;
+  border-radius: 10px;
+  box-shadow: 0 5px grey;
+}
+
+.headers {
+  font-family: Roboto;
+  border-bottom: thin dotted;
+  text-align: center;
+}
+
+.lists {
+  border-radius: 2%;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid darkolivegreen;
+  list-style-position: inside;
+  font-family: Calibri;
+}
+
+.career-goals {
+  background-color: antiquewhite;
+  padding: 15px;
+  border: 1px solid burlywood;
+  list-style-position: inside;
+}
+
+#about-me {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#my-reasons {
+  border: none;
+  padding: 0;
+  text-align: justify;
+}
+
+li:not(:last-of-type) {
+  margin-bottom: 1.5em;
+}
+
+#colorado {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
