--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,15 @@ li:not(:last-of-type) {
   margin-left: auto;
   margin-right: auto;
 }
+
+.pick-restaurant {
+  display: inline-block;
+  padding: 10px 10px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  color: black;
+  background-color: yellow;
+  border-radius: 10px;
+  box-shadow: 0 5px grey;
+}
